# protobuf

./: .gitignore  CMakeLists.txt  readme.md  utils.proto  video_games.proto
.devcontainer/: Dockerfile  devcontainer.json
cpp/: main.cpp
cpp/proto/: utils.pb.cc  utils.pb.h  video_games.pb.cc  video_games.pb.h
go/: go.mod  main.go  message.txt
go/main/: go.mod  main.go  message2.txt
go/main/messages/utils/: utils.pb.go
go/main/messages/video_games/: video_games.pb.go
go/messages/utils/: utils.pb.go
go/messages/video_games/: video_games.pb.go
go/utils/: utils.pb.go
go/video_games/: video_games.pb.go
proto/: utils.proto  video_games.proto
